[gd_scene load_steps=27 format=3 uid="uid://dslcjp4bl3jjb"]

[ext_resource type="Script" path="res://scripts/battleSetup0.gd" id="1_jl0vj"]
[ext_resource type="Texture2D" uid="uid://cr16n37mgo3mx" path="res://assets/textures/characters/NPCs/sample_battle_npc.png" id="2_novav"]
[ext_resource type="Texture2D" uid="uid://cfffuw4vbo7w7" path="res://assets/textures/characters/animated/sprite_01.png" id="3_dwaik"]
[ext_resource type="Texture2D" uid="uid://b07ms6rm6yl4j" path="res://assets/textures/characters/animated/sprite_00.png" id="4_k4usr"]
[ext_resource type="Texture2D" uid="uid://bh8eo7t60d1k6" path="res://assets/textures/characters/animated/sprite_02.png" id="5_kaywl"]
[ext_resource type="Texture2D" uid="uid://dhbl5uecfva8e" path="res://assets/textures/characters/animated/sprite_10.png" id="6_pyoy1"]
[ext_resource type="Texture2D" uid="uid://dv4ex7sybo2yd" path="res://assets/textures/characters/animated/sprite_11.png" id="7_f37w5"]
[ext_resource type="Texture2D" uid="uid://crt7hqpx18p00" path="res://assets/textures/characters/animated/sprite_06.png" id="8_u78yf"]
[ext_resource type="Texture2D" uid="uid://dan3c4v80q4b6" path="res://assets/textures/characters/animated/sprite_07.png" id="9_jtgul"]
[ext_resource type="Texture2D" uid="uid://dua7ltv28a6eg" path="res://assets/textures/characters/animated/sprite_04.png" id="10_s7b4j"]
[ext_resource type="Texture2D" uid="uid://cry0adchexxjs" path="res://assets/textures/characters/animated/sprite_05.png" id="11_jv5sj"]
[ext_resource type="Texture2D" uid="uid://wshnstio01ae" path="res://assets/textures/characters/animated/sprite_08.png" id="12_mrgg3"]
[ext_resource type="Texture2D" uid="uid://6cc2kftyk0vs" path="res://assets/textures/characters/animated/sprite_09.png" id="13_vri1x"]
[ext_resource type="StyleBox" uid="uid://cnag1n833vuvt" path="res://assets/StyleBoxes/attackButtonRed.tres" id="14_u33py"]
[ext_resource type="Script" path="res://scripts/battleHealth0.gd" id="15_2t05x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_43u4b"]
radius = 23.0
height = 50.0

[sub_resource type="SpriteFrames" id="SpriteFrames_r3rmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_novav")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dwaik")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_k4usr")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kaywl")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pyoy1")
}, {
"duration": 1.0,
"texture": ExtResource("7_f37w5")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_u78yf")
}, {
"duration": 1.0,
"texture": ExtResource("9_jtgul")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_s7b4j")
}, {
"duration": 1.0,
"texture": ExtResource("11_jv5sj")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_mrgg3")
}, {
"duration": 1.0,
"texture": ExtResource("13_vri1x")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5gcso"]
resource_name = "typewriter"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ert8"]
_data = {
"typewriter": SubResource("Animation_5gcso")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fllgp"]
bg_color = Color(0.278431, 0.317647, 0.376471, 1)

[sub_resource type="Theme" id="Theme_dyy3a"]
Button/styles/normal = SubResource("StyleBoxFlat_fllgp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7sam"]
bg_color = Color(0.592157, 0, 0.12549, 1)

[sub_resource type="Theme" id="Theme_plkh3"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/styles/hover = SubResource("StyleBoxFlat_a7sam")
Button/styles/normal = ExtResource("14_u33py")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41dfq"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.815686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulsyo"]
bg_color = Color(0.584314, 1, 0.623529, 1)

[sub_resource type="Theme" id="Theme_fa8bx"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_41dfq")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ulsyo")

[node name="Battle0" type="Node2D"]
script = ExtResource("15_2t05x")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(413, 359)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_43u4b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_r3rmo")
animation = &"walk_up"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_8ert8")
}

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(0, 23)

[node name="CharacterBody2D2" type="CharacterBody2D" parent="."]
position = Vector2(886, 160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2"]
shape = SubResource("CapsuleShape2D_43u4b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D2"]
sprite_frames = SubResource("SpriteFrames_r3rmo")
animation = &"down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D2"]
libraries = {
"": SubResource("AnimationLibrary_8ert8")
}

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D2"]
target_position = Vector2(0, 23)

[node name="Panel" type="Panel" parent="."]
offset_top = 465.0
offset_right = 1404.0
offset_bottom = 647.0
script = ExtResource("1_jl0vj")

[node name="RunButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1054.0
offset_top = 24.0
offset_right = 1295.0
offset_bottom = 153.0
theme = SubResource("Theme_dyy3a")
text = "Run :("

[node name="AttackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 104.0
offset_top = 26.0
offset_right = 345.0
offset_bottom = 155.0
theme = SubResource("Theme_plkh3")
text = "Attack!"

[node name="PlayerHealth" type="ProgressBar" parent="."]
offset_left = 502.0
offset_top = 408.0
offset_right = 1284.0
offset_bottom = 435.0
theme = SubResource("Theme_fa8bx")
max_value = 354.0
value = 354.0
show_percentage = false

[node name="EnemyHealth" type="ProgressBar" parent="."]
offset_left = 39.0
offset_top = 60.0
offset_right = 821.0
offset_bottom = 87.0
theme = SubResource("Theme_fa8bx")
max_value = 354.0
value = 354.0
show_percentage = false

[connection signal="npc_attack" from="." to="." method="_on_npc_attack"]
[connection signal="pressed" from="Panel/RunButton" to="Panel" method="_on_run_button_pressed"]
[connection signal="pressed" from="Panel/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Panel/AttackButton" to="Panel" method="_on_attack_button_pressed"]
